# SnakeAI

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
Targets/NoAIApp/: CMakeLists.txt  main.cpp
Targets/SnakeAIApp/: BaseCmd.hpp  CMakeLists.txt  GACmd.cpp  GACmd.hpp  NoAICmd.cpp  NoAICmd.hpp  main.cpp
Targets/SnakeGameLib/: CMakeLists.txt  FFNN.cpp  FFNN.hpp  FontSFNSMono.hpp  GeneticAlgorithm.hpp  SnakeGame.cpp  SnakeGame.hpp  ThreadPool.hpp
